--- a/ajite/ajite/Storyboards/Base.lproj/Main.storyboard
+++ b/ajite/ajite/Storyboards/Base.lproj/Main.storyboard
@@ -1281,7 +1281,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="f8B-Os-R7F">
-                                <rect key="frame" x="20" y="184" width="335" height="277"/>
+                                <rect key="frame" x="20" y="184" width="335" height="444"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="azt-9V-hMC">
                                         <rect key="frame" x="20" y="33" width="253" height="34"/>
@@ -1301,8 +1301,8 @@
                                             <action selector="searchAction:" destination="YTT-Lv-6TJ" eventType="touchUpInside" id="gPe-IZ-yzq"/>
                                         </connections>
                                     </button>
-                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="UVc-5k-chS">
-                                        <rect key="frame" x="20" y="86" width="295" height="186"/>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="UVc-5k-chS" customClass="YoutubeVideoSearchTableView" customModule="ajite" customModuleProvider="target">
+                                        <rect key="frame" x="20" y="86" width="295" height="338"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                         <prototypes>
                                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="YoutubeVideoSearchTableViewCell" rowHeight="58" id="LPM-jS-59R" customClass="YoutubeVideoSearchTableViewCell" customModule="ajite" customModuleProvider="target">
@@ -1336,6 +1336,14 @@
                                                                 </label>
                                                             </subviews>
                                                         </stackView>
+                                                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0fY-CE-MZb">
+                                                            <rect key="frame" x="210" y="11" width="70" height="35"/>
+                                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                            <state key="normal" image="share-purple"/>
+                                                            <connections>
+                                                                <action selector="shareSong:" destination="LPM-jS-59R" eventType="touchUpInside" id="RzO-WG-FvO"/>
+                                                            </connections>
+                                                        </button>
                                                     </subviews>
                                                     <constraints>
                                                         <constraint firstItem="BB5-we-7qp" firstAttribute="top" secondItem="iGV-tY-1JM" secondAttribute="top" constant="10" id="7KP-md-yrI"/>
@@ -1357,7 +1365,7 @@
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="mW1-TY-SxW" secondAttribute="trailing" constant="24.333333333333314" id="1Dc-HV-HDc"/>
-                                    <constraint firstAttribute="bottom" secondItem="UVc-5k-chS" secondAttribute="bottom" constant="5" id="6DE-m3-1Mr"/>
+                                    <constraint firstAttribute="bottom" secondItem="UVc-5k-chS" secondAttribute="bottom" constant="20" id="6DE-m3-1Mr"/>
                                     <constraint firstItem="azt-9V-hMC" firstAttribute="centerY" secondItem="mW1-TY-SxW" secondAttribute="centerY" id="HPt-Ia-HJM"/>
                                     <constraint firstItem="azt-9V-hMC" firstAttribute="leading" secondItem="UVc-5k-chS" secondAttribute="leading" id="KlP-mF-g0i"/>
                                     <constraint firstItem="mW1-TY-SxW" firstAttribute="top" secondItem="f8B-Os-R7F" secondAttribute="top" constant="39" id="OfL-8f-xCi"/>
@@ -1374,7 +1382,7 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="0.29999999999999999" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="8tC-lg-pxP" firstAttribute="bottom" secondItem="f8B-Os-R7F" secondAttribute="bottom" constant="268" id="1jt-er-Gfa"/>
+                            <constraint firstItem="8tC-lg-pxP" firstAttribute="bottom" secondItem="f8B-Os-R7F" secondAttribute="bottom" constant="150" id="1jt-er-Gfa"/>
                             <constraint firstItem="8tC-lg-pxP" firstAttribute="trailing" secondItem="f8B-Os-R7F" secondAttribute="trailing" constant="20" id="AGb-Z9-OP0"/>
                             <constraint firstItem="f8B-Os-R7F" firstAttribute="leading" secondItem="8tC-lg-pxP" secondAttribute="leading" constant="20" id="ItC-5H-2Fx"/>
                             <constraint firstItem="f8B-Os-R7F" firstAttribute="centerX" secondItem="HFu-4D-gnM" secondAttribute="centerX" id="fL9-nc-PeS"/>
@@ -1912,7 +1920,7 @@
                                         <rect key="frame" x="0.0" y="115" width="375" height="326"/>
                                         <subviews>
                                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ogD-LH-7Su" userLabel="Friends Table View">
-                                                <rect key="frame" x="0.0" y="39" width="375" height="372"/>
+                                                <rect key="frame" x="0.0" y="38.666666666666686" width="375" height="372.33333333333331"/>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                                 <prototypes>
                                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="myFriendsCell" rowHeight="60" id="wGo-B5-PcN" userLabel="Friends Table View Cell" customClass="MyFriendsTableViewCell" customModule="ajite" customModuleProvider="target">
@@ -2232,9 +2240,9 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="xEi-qz-IQe"/>
+        <segue reference="KTm-i4-nT0"/>
         <segue reference="YzI-Ue-2oM"/>
-        <segue reference="ZOl-UM-4IR"/>
+        <segue reference="RTc-KO-dhc"/>
         <segue reference="Fvk-M5-njC"/>
     </inferredMetricsTieBreakers>
     <resources>
@@ -2260,6 +2268,7 @@
         <image name="plus-navy" width="200" height="200"/>
         <image name="settings-navy" width="30" height="30"/>
         <image name="share-navy" width="100" height="50"/>
+        <image name="share-purple" width="100" height="50"/>
         <image name="youtube-navy" width="200" height="200"/>
     </resources>
 </document>
